# recce

./: .gitignore  README.md  pyproject.toml
recce/: __init__.py  agent.py  cli.py  report.py  tools.py  types.py
recce/recon/: servicenow.py  tools.py  web.py
tests/: test_agent.py  test_servicenow.py  test_web_recon.py
